--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^3.4.3",
     "vue-slick": "^1.1.15",
     "vue-slick-carousel": "^1.0.6",
-    "vue-social-sharing": "^3.0.3"
+    "vue-social-sharing": "^3.0.3",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
